--- a/resources/config.yml
+++ b/resources/config.yml
@@ -14,10 +14,10 @@ killing-experience: true
 # Decides in which worlds the previous options are active.
 # Example ["WorldName1,"WorldName2"]
 # use worlds: "all" if you want to activate them in every world
-worlds: ["World1","World2"]
+worlds: ["all"]
 
 # Sovrascrive la bottiglia di esperienza di pocketmine in modo che quando la si utilizza l'esperienza vada direttamente nella barrra dell'esperienza del giocatore
 # Override pocketmine's xp botte so the xp goes directly into the player's xp bar
-override-experience-bottle: false
+override-experience-bottle: true
 
 ---
